Add white background to every cell

--- a/resources/public/css/reabledit.css
+++ b/resources/public/css/reabledit.css
@@ -23,6 +23,7 @@
   display: flex;
   flex: 1 1 0;
   align-items: center;
+  background-color: #fff;
   border: 1px solid #ddd;
   height: 40px;
 }
