--- a/resources/public/css/reabledit.css
+++ b/resources/public/css/reabledit.css
@@ -14,7 +14,7 @@
 }
 
 .reabledit-header {
-  background-color: #f3f3f3;
+  background-color: #f3f3f3 !important;
   font-weight: bold;
   padding-left: 6px;
 }
