Fix bug where dropdown did not show outside the table

--- a/resources/public/css/reabledit.css
+++ b/resources/public/css/reabledit.css
@@ -41,8 +41,8 @@
 }
 
 .reabledit-dropdown {
-  position: relative;
-  width: 100%;
+  position: absolute;
+  width: 300px;
 }
 
 .reabledit-dropdown:focus {
