--- a/resources/public/css/reabledit.css
+++ b/resources/public/css/reabledit.css
@@ -4,6 +4,14 @@
   height: 100%;
 }
 
+.reabledit-resize-area {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 .reabledit-row {
   display: flex;
 }
@@ -13,9 +21,17 @@
   font-weight: bold;
 }
 
+.reabledit-header-handle {
+  width: 10px;
+  height: 100%;
+  float: right;
+  cursor: ew-resize;
+}
+
 .reabledit-cell {
-  flex: 1 1 0;
-  min-width: 100px;
+  flex: 0 0 auto;
+  min-width: 75px;
+  box-sizing: border-box;
   background-color: #fff;
   border: 1px solid #ddd;
   height: 30px;
