Fix bug where header drag handle was not clickable when cell shrunk

--- a/resources/public/css/reabledit.css
+++ b/resources/public/css/reabledit.css
@@ -19,12 +19,12 @@
 .reabledit-header {
   background-color: #f3f3f3 !important;
   font-weight: bold;
+  display: flex;
+  justify-content: space-between;
 }
 
 .reabledit-header-handle {
   width: 10px;
-  height: 100%;
-  float: right;
   cursor: ew-resize;
 }
 
